docs/api/qiskit/2.3/qiskit.transpiler.passes.WrapAngles.mdx
---
title: WrapAngles (v2.3)
description: API reference for qiskit.transpiler.passes.WrapAngles in qiskit v2.3
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.WrapAngles
---

# WrapAngles

<Class id="qiskit.transpiler.passes.WrapAngles" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/transpiler/passes/utils/wrap_angles.py#L21-L108" signature="qiskit.transpiler.passes.WrapAngles(*args, **kwargs)" modifiers="class">
  Bases: [`TransformationPass`](qiskit.transpiler.TransformationPass "qiskit.transpiler.basepasses.TransformationPass")

  Wrap angles outside the bound specified in the target.

  This pass will check all the gates in the circuit and check if there are any gates outside the bound specified in the target. If any gates outside the bound are identified, the callback in the target will be called to substitute the gate outside the bound with an equivalent subcircuit. This pass does not run on gates that are parameterized, even if the gate has unparameterized parameters outside a specified bound. If there are parameterized gates in the circuit they will be ignored by this pass as bound angles are necessary to transform the gate. For example the below example demonstrates how the callback mechanism and registration works, but doesn’t show a useful transformation, but is simple to follow:

  ```python
  from qiskit.circuit import Gate, Parameter, Qubit, QuantumCircuit
  from qiskit.circuit.library import RZGate
  from qiskit.dagcircuit import DAGCircuit
  from qiskit.transpiler.passes import WrapAngles
  from qiskit.transpiler import Target, WrapAngleRegistry

  param = Parameter("a")
  circuit = QuantumCircuit(1)
  circuit.rz(6.8, 0)
  target = Target(num_qubits=1)
  target.add_instruction(RZGate(param), angle_bounds=[(0, 0.5)])

  def callback(angles, _qubits):
      angle = angles[0]
      if angle > 0:
          number_of_gates = angle / 0.5
      else:
          number_of_gates = (6.28 - angle) / 0.5
      dag = DAGCircuit()
      dag.add_qubits([Qubit()])
      for _ in range(int(number_of_gates)):
          dag.apply_operation_back(RZGate(0.5), [dag.qubits[0]])
      return dag

  registry = WrapAngleRegistry()
  registry.add_wrapper("rz", callback)
  wrap_pass = WrapAngles(target, registry)
  res = wrap_pass(circuit)
  res.draw("mpl")
  ```

  ![Circuit diagram of the output from running the WrapAngles pass](/docs/images/api/qiskit/2.3/qiskit-transpiler-passes-WrapAngles-1.avif)

  **Parameters**

  *   **target** ([*Target*](qiskit.transpiler.Target "qiskit.transpiler.Target")) – The [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target") representing the target QPU.

  *   **registry** ([*WrapAngleRegistry*](qiskit.transpiler.WrapAngleRegistry "qiskit.transpiler.WrapAngleRegistry")) –

      The registry of wrapping functions used by the pass to wrap the angles of a gate. If not specified the global [`DEFAULT_REGISTRY`](#qiskit.transpiler.passes.WrapAngles.DEFAULT_REGISTRY "qiskit.transpiler.passes.WrapAngles.DEFAULT_REGISTRY") object will be used.

      Unless you are planning to run this pass standalone or are building a custom [`PassManager`](qiskit.transpiler.PassManager "qiskit.transpiler.PassManager") including this pass you will want to rely on [`DEFAULT_REGISTRY`](#qiskit.transpiler.passes.WrapAngles.DEFAULT_REGISTRY "qiskit.transpiler.passes.WrapAngles.DEFAULT_REGISTRY").

  ## Attributes

  ### DEFAULT\_REGISTRY

  <Attribute id="qiskit.transpiler.passes.WrapAngles.DEFAULT_REGISTRY" attributeValue="<qiskit._accelerate.angle_bound_registry.WrapAngleRegistry object>">
    A global instance of [`WrapAngleRegistry`](qiskit.transpiler.WrapAngleRegistry "qiskit.transpiler.WrapAngleRegistry") that is used by default by this pass when no explicit registry is specified.

    <Admonition title="Note" type="note">
      This is also publicly accessible at the location `qiskit.transpiler.passes.utils.wrap_angles.WRAP_ANGLE_REGISTRY` due to an oversight in Qiskit 2.2 (in which the extended path is the only valid location). It is strongly encouraged to access this object via [`WrapAngles`](#qiskit.transpiler.passes.WrapAngles "qiskit.transpiler.passes.WrapAngles"), however, if you do not need to support Qiskit 2.2.
    </Admonition>

    <Admonition title="Note" type="note">
      Attempts to write an entirely new registry object to the `qiskit.transpiler.passes.utils.wrap_angles` path will not be reflected in the defaults in Qiskit 2.3 onwards. While we do not recommend attempting to overwrite the object completely, should you need to do this and to support Qiskit 2.2 onwards, you should write references to the same object to both:

      *   [`WrapAngles.DEFAULT_REGISTRY`](#qiskit.transpiler.passes.WrapAngles.DEFAULT_REGISTRY "qiskit.transpiler.passes.WrapAngles.DEFAULT_REGISTRY")
      *   `qiskit.transpiler.passes.utils.wrap_angles.WRAP_ANGLE_REGISTRY`
    </Admonition>
  </Attribute>

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.WrapAngles.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.WrapAngles.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>

  ## Methods

  ### execute

  <Function id="qiskit.transpiler.passes.WrapAngles.execute" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/transpiler/basepasses.py#L161-L180" signature="execute(passmanager_ir, state, callback=None)">
    Execute optimization task for input Qiskit IR.

    **Parameters**

    *   **passmanager\_ir** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any)) – Qiskit IR to optimize.
    *   **state** ([*PassManagerState*](qiskit.passmanager.PassManagerState "qiskit.passmanager.compilation_status.PassManagerState")) – State associated with workflow execution by the pass manager itself.
    *   **callback** ([*Callable*](https://docs.python.org/3/library/collections.abc.html#collections.abc.Callable) *| None*) – A callback function which is called per execution of optimization task.

    **Returns**

    Optimized Qiskit IR and state of the workflow.

    **Return type**

    [tuple](https://docs.python.org/3/library/stdtypes.html#tuple)\[[*Any*](https://docs.python.org/3/library/typing.html#typing.Any), [qiskit.passmanager.compilation\_status.PassManagerState](qiskit.passmanager.PassManagerState "qiskit.passmanager.compilation_status.PassManagerState")]
  </Function>

  ### name

  <Function id="qiskit.transpiler.passes.WrapAngles.name" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/passmanager/base_tasks.py#L68-L70" signature="name()">
    Name of the pass.

    **Return type**

    [str](https://docs.python.org/3/library/stdtypes.html#str)
  </Function>

  ### run

  <Function id="qiskit.transpiler.passes.WrapAngles.run" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/transpiler/passes/utils/wrap_angles.py#L106-L108" signature="run(dag)">
    Run a pass on the DAGCircuit. This is implemented by the pass developer.

    **Parameters**

    **dag** – the dag on which the pass is run.

    **Raises**

    [**NotImplementedError**](https://docs.python.org/3/library/exceptions.html#NotImplementedError) – when this is left unimplemented for a pass.
  </Function>

  ### update\_status

  <Function id="qiskit.transpiler.passes.WrapAngles.update_status" github="https://github.com/Qiskit/qiskit/tree/stable/2.3/qiskit/transpiler/basepasses.py#L182-L190" signature="update_status(state, run_state)">
    Update workflow status.

    **Parameters**

    *   **state** ([*PassManagerState*](qiskit.passmanager.PassManagerState "qiskit.passmanager.compilation_status.PassManagerState")) – Pass manager state to update.
    *   **run\_state** (*RunState*) – Completion status of current task.

    **Returns**

    Updated pass manager state.

    **Return type**

    [*PassManagerState*](qiskit.passmanager.PassManagerState "qiskit.passmanager.compilation_status.PassManagerState")
  </Function>
</Class>

